# twemoji-assets

./: .gitignore  Cargo.toml  Makefile.toml  README.md  emoji.rs  gen.rs
benches/: from_emoji.rs  from_name.rs
examples/: Cargo.toml  png_large_binary.rs  png_small_binary.rs  svg_large_binary.rs  svg_small_binary.rs
src/: lib.rs
src/png/: codes.rs  mod.rs  names.rs  shortcodes.rs
src/svg/: codes.rs  mod.rs  names.rs  shortcodes.rs
templates/: svg_codes_mod.template.rs  svg_match_emoji.template.rs  svg_match_name.template.rs  svg_names_mod.template.rs  svg_twemoji_asset.template.rs  svg_twemoji_asset_from_name.template.rs
tests/: Cargo.toml  png.rs  svg.rs
