[package]
name = "twemoji-assets"
version.workspace = true
edition.workspace = true
exclude = [
    ".gitignore",
    "Cargo.lock",
    "emojibase.data.json",
    "emojibase.shortcodes.json",
    "gen.rs",
    "Makefile.toml"
]

[workspace.package]
version = "0.1.0+14.0.2"
edition = "2021"

[features]
default = ["svg", "names"]
svg = []
png = []
names = []

[workspace]
members = ["examples", "tests"]

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "from_emoji"
harness = false

[[bench]]
name = "from_name"
harness = false
