[package]
name = "twemoji-assets"
version.workspace = true
authors = ["Tim 'Piepmatz' Hesse"]
repository = "https://github.com/cptpiepmatz/twemoji-assets"
keywords = ["twitter", "emoji", "twemoji", "assets"]
categories = ["graphics", "value-formatting"]
edition.workspace = true
description = "A sophisticated crate that provides the assets from Twemoji."
license = "MIT"
exclude = [
    ".gitignore",
    "Cargo.lock",
    "emojibase.data.json",
    "emojibase.shortcodes.json",
    "gen.rs",
    "Makefile.toml",
    "templates"
]

[workspace.package]
version = "1.2.1+15.0.3"
edition = "2021"

[features]
default = ["svg", "names"]
svg = []
png = []
names = []

[workspace]
members = ["examples", "tests"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "from_emoji"
harness = false

[[bench]]
name = "from_name"
harness = false

[package.metadata.docs.rs]
all-features = true
