[package]
name = "examples"
version.workspace = true
edition.workspace = true

[[example]]
name = "svg_small_binary"
path = "svg_small_binary.rs"

[[example]]
name = "svg_large_binary"
path = "svg_large_binary.rs"

[[example]]
name = "png_small_binary"
path = "png_small_binary.rs"

[[example]]
name = "png_large_binary"
path = "png_large_binary.rs"

[dependencies]
twemoji-assets = { path = "../.", features = ["svg", "png", "names"] }
